add findAllOrders method